# vulkan-guide

shaders/: colored_triangle.vert  compile.bat  default_lit.frag  texture_lit.frag  tri_mesh.vert
src/: CMakeLists.txt  deletion_queue.h  vk_camera.h  vk_engine.cpp  vk_engine.h  vk_frame.h  vk_gpu_object_data.h  vk_gpu_scene_data.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_object.h  vk_pipeline.cpp  vk_pipeline.h  vk_push_constants.h  vk_scene_data.h  vk_textures.cpp  vk_textures.h  vk_types.h  vk_upload_context.h
